port r50894 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-10-branch@50895 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -66,6 +66,9 @@ BUG FIXES
     o	R CMD SHLIB could fail if used with paths that were not
 	alphanumeric, e.g. contained '+'.  (PR#14168)
 
+    o	sprintf() was no re-entrant, which potentially caused problems
+	if an as.character() method called it.
+
 
 
 		CHANGES IN R VERSION 2.10.1
