Allow n-dim arrays to be subsetted by an n-column character matrix
The character matrix is converted to the corresponding integer matrix
by matching against the dimnames of the array.  NA values in any row
of the character matrix are propagated to the result.  Unmatched
values result in a subscript out of bounds error.  Empty string "" is
not allowed to match and therefore always results in an error.

git-svn-id: https://svn.r-project.org/R/trunk@50896 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -219,6 +219,13 @@ NEW FEATURES
     o	Added \subsection{}{} macro to Rd syntax, for subsections
     	within sections.
 
+    o	n-dimensional arrays with dimension names can now be indexed
+	by an n-column character matrix. The indices are matched
+	against the dimension names.  NA indices are propagated to the
+	result.  Unmatched values and "" are not allowed and result in
+	an error.
+
+
 
 DEPRECATED & DEFUNCT
 
