--- a/NEWS
+++ b/NEWS
@@ -66,7 +66,7 @@ BUG FIXES
     o	R CMD SHLIB could fail if used with paths that were not
 	alphanumeric, e.g. contained '+'.  (PR#14168)
 
-    o	sprintf() was no re-entrant, which potentially caused problems
+    o	sprintf() was not re-entrant, which potentially caused problems
 	if an as.character() method called it.
 
 
