--- a/NEWS
+++ b/NEWS
@@ -202,7 +202,7 @@ NEW FEATURES
     o	file() has a new argument 'raw' which may help if it is used
 	with something other than a regular file, e.g. a character device.
 
-    o	New function stroi(), a wrapper for the C function strtol.
+    o	New function strtoi(), a wrapper for the C function strtol.
 
     o	as.octmode() and as.hexmode() now allow inputs of length other
 	than one.
