--- a/doc/THANKS
+++ b/doc/THANKS
@@ -17,6 +17,7 @@ Claus Ekstrom		<ekstrom@dina.kvl.dk>
 Sebastian Fischmeister	<sfischme@uwaterloo.ca>
 John Fox		<jfox@mcmaster.ca>
 Paul Gilbert		<pgilbert@bank-banque-canada.ca>
+Yu Gong			<armgong@yahoo.com>
 Gabor Grothendieck	<ggrothendieck@gmail.com>
 Frank E Harrell Jr	<f.harrell@vanderbilt.edu>
 Torsten Hothorn		<Torsten.Hothorn@rzmail.uni-erlangen.de>
